plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.2'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'gruporas'
version = '0.0.1-SNAPSHOT'
description = 'API para gerenciamento e cálculo de tarifas de água'

ext['spring-modulith.version'] = '1.1.1'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// Web & Banco de Dados
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.security:spring-security-crypto'
	implementation 'org.flywaydb:flyway-core'
	runtimeOnly 'org.postgresql:postgresql'

	// Spring Modulith
	implementation 'org.springframework.modulith:spring-modulith-starter-core'
	testImplementation 'org.springframework.modulith:spring-modulith-starter-test'

	// Identificadores (UUID)
	implementation 'com.github.f4b6a3:uuid-creator:6.1.1'

	// Utilitários & Documentação
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'

	// Testes
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.modulith:spring-modulith-bom:${ext['spring-modulith.version']}"
	}
}

tasks.named('test') {
	useJUnitPlatform()
}